[package]
name = "radar"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
resvg = "0.44.0"
tiny-skia = "0.11.4"
base64 = "0.22"
usvg = { version = "0.44.0", features = ["text"] }
